# cmcm

./: .LICENSE  .cmake-linter.yml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  ModulesList.cmake  README.md
.github/workflows/: .env  docs.yml  linux.yml  macOS.yml  windows.yml
.github/workflows/env/: .env  .env.linux
docs/: CMakeLists.txt  conf.py  index.rst
docs/cmake/: index.rst
docs/module/: CPM.rst  Missives.rst
docs/modules/: Colors.rst
modules/: CPM.cmake  Colors.cmake  Missives.cmake
tests/: CMakeLists.txt  Colors.cmake  Colors.test.cmake  Missives.test.cmake  SetupModulesList.cmake
